--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "async-practice",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "deploy": "gh-pages -d /src"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "gh-pages": "^4.0.0"
   }
